deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-dk-tomasnorre-blog
  namespace: default
spec:
  selector:
    matchLabels:
      app: site-dk-tomasnorre-blog
  replicas: 3
  template:
    metadata:
      labels:
        app: site-dk-tomasnorre-blog
    spec:
      containers:
        - name: blog
          image: docker.tomasnorre.dk/dk-tomasnorre-blog:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: registrycredentials
