deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: site-dk-tomasnorre-blog
  namespace: default
spec:
  ports:
    - name: http
      port: 80

  selector:
    app:  site-dk-tomasnorre-blog
  type: ClusterIP
