deploy/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-dk-tomasnorre-blog
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: blog.tomasnorre.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site-dk-tomasnorre-blog
                port:
                  number: 80
  tls:
    - hosts:
        - blog.tomasnorre.dk
      secretName: site-dk-tomasnorre-blog

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-redirect
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-traefik-redirectscheme@kubernetescrd
spec:
  rules:
    - host: blog.tomasnorre.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site-dk-tomasnorre-blog
                port:
                  number: 80
